--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>TradeX</title>
   </head>
   <body>
+  <script>
+    window.global = window;
+  </script>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
